# Templates

./: .gitignore  README.md
.github/workflows/: pr-verify-rust-api-lambda-template.yml  pr-verify-rust-sqs-lambda-template.yml
rust/: .gitignore
rust/api-lambda/: Cargo.toml  README.md  cargo-generate.toml  config.toml  serverless.yml  template.yaml
rust/api-lambda/.github/workflows/: deploy-using-iam-role.yml  deploy.yml
rust/api-lambda/macros/: Cargo.toml
rust/api-lambda/macros/src/: lib.rs
rust/api-lambda/src/: lib.rs  main.rs  router.rs  routing.rs  telemetry.rs
rust/api-lambda/src/routes/: health.rs
rust/api-lambda/tests/: api_endpoints_tests.rs  api_test.rs
rust/sqs-lambda/: .genignore  Cargo.toml  README.md  template.yaml
rust/sqs-lambda/.github/workflows/: ci.yml  deploy-using-iam-role.yml  deploy.yml
rust/sqs-lambda/src/: handler.rs  lib.rs  main.rs  settings.rs  telemetry.rs
terraform/: .gitignore  README.md
terraform/environments/prod/: main.tf  outputs.tf  vars.tf
terraform/environments/test/: main.tf  vars.tf
terraform/modules/github-repo-oidc/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  vars.tf
