[package]
name = "api-lambda"
version = "0.1.0"
edition = "2021"

[lib]
name = "api_lambda"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
axum = "0.7"
lambda_http = "0.13"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-opentelemetry = "0.28"

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }

[dev-dependencies]
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
