[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[lib]
name = "{{crate_name}}"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
aws_lambda_events = "0.15"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.15", default-features = false, features = ["toml"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-opentelemetry = { version = "0.28", optional = true }

# opentelemetry is the lightweight API crate (handler.rs calls
# global::meter() directly, which no-ops until a provider is set) and stays
# a regular dependency. The SDK/exporter/bridge crates below are gated
# behind `otlp` since they pull in the tonic/prost gRPC stack, a major chunk
# of compile time, for a runtime-opt-in exporter that's disabled by default
# (see telemetry.rs).
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"], optional = true }

[features]
otlp = ["dep:tracing-opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dev-dependencies]
serde_json = "1"

# CI builds on a native arm64 runner (matches Architectures: [arm64] in
# template.yaml), so skip Zig cross-compilation and use the native linker.
[package.metadata.lambda.build.compiler]
type = "cargo"
